# SDN-Controller-Benchmark

./: CPU and Memory Utilisation Script.py  Latency Test Codes.py  Latency_Results.csv  README.md  SDN Controllers Benchmark.py  Throughput Test Codes.py  Throughput_Results.csv  pyproject.toml
example_data/: Latency_Results.csv  Throughput_Results.csv
src/: AnalyseResults.py  DataHandling.py  SDN Controllers Benchmark.py
