[tool.poetry]
name = "sdn-controller-benchmarking"
version = "0.1.0"
description = ""
authors = ["r4space <jane@wyngaard.co.za>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.3"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
